--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,35 +15,35 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
-  "default-dfjk": "默认为DFJK",
+  "eat-kano": "吃掉蔡徐坤",
+  "default-dfjk": "默认ikun为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "新概念坤游",
   "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-intro2": "看你ikun是多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
-  "time-up": "时间到",
-  "calculating": "计算中",
-  "score": "得分",
-  "best": "最佳",
-  "again": "重来",
-  "home": "主页",
-  "rank": "排行",
+  "time-up": "ikun时间到",
+  "calculating": "ikun数值计算中",
+  "score": "ikun得分数值",
+  "best": "最佳ikun数值",
+  "again": "重来ikun",
+  "home": "ikun主页",
+  "rank": "ikun排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "你是ikun么",
+  "text-level-2": "ikun不够啊",
+  "text-level-3": "勉强合格",
+  "text-level-4": "你是真ikun",
+  "text-level-5": "你是ikun群主么？",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "rank-title": "吃掉蔡徐坤-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "吃掉蔡徐坤-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
